apps/my-python-app/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-python-app-consumer
  template:
    metadata:
      labels:
        app: my-python-app-consumer
    spec:
      containers:
      - name: consumer
        image: ghcr.io/hoon0925/my-python-app:latest
        command: ["python", "consumer.py"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
